--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 
 <body>
     <div class="container">
+
+        <section class="header">
+            <header>
+               <img src="img/lambda-black.png"> 
+               <nav>
+                   <a href="">Home</a>
+                   <a href="">About</a>
+                   <a href="">Products</a>
+                   <a href="">Blog</a>
+                   <a href="">Contact</a>
+               </nav>
+            </header>
+
+            <img class="jumbo" src="img/jumbo.jpg">
+
+        </section>
    
         <section class="top-content">
             <div class="text-container">
