--- a/about.html
+++ b/about.html
@@ -13,6 +13,22 @@
 
 <body>
     <div class="container about-page">
+
+        <section class="header">
+            <header>
+               <img src="img/lambda-black.png"> 
+               <nav>
+                   <a href="">Home</a>
+                   <a href="about.html">About</a>
+                   <a href="">Products</a>
+                   <a href="">Blog</a>
+                   <a href="">Contact</a>
+               </nav>
+            </header>
+
+            <img class="jumbo" src="img/jumbo-about.png">
+
+        </section>
      
     About
 
