--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
               <img src="img/about-office.png" alt="strategy">             
               <h2>Places We Work</h2>
               <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-              <button>Learn More</button>Learn More
+              <button>Learn More</button>
             </div>
 
             <div class="main">
