--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <section class="header">
             <header>
-               <img src="img/lambda-black.png"> 
+               <a href="index.html"><img src="img/lambda-black.png"></a> 
                <nav>
                    <a href="">Home</a>
                    <a href="about.html">About</a>
